Correction du contraste des pages

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: #2B094D;
 }
 
 .d-bloc .a-btn:hover,
@@ -736,7 +736,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #2B094D!important;
 }
 
 .portfolio-thumb {
@@ -775,12 +775,17 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
+    font-weight: bold;
 }
 
+.tc-black {
+    color: #2B094D!important;
+    font-weight: bold; 
+}
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #2B094D!important;
 }
 
 .btn-atomic-tangerine:hover {
